added delayq file

--- a/react.html
+++ b/react.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <h1 class="bg-primaryu">Niharika Chowdary Gangineni speed check</h1>
+  <h1>Niharika Chowdary Gangineni speed check</h1>
 
   <div id="target">Your time</div>
 <div id="counter">Count</div>
