updated README file

--- a/hunter.html
+++ b/hunter.html
@@ -51,7 +51,7 @@
             <div class="col-sm padding-top:2x"><img src="bush.jpg" alt="bush" height="90" width="90" id="image18" onclick="check(17)"></div>
         </div>
         <div class="row">
-            <div class="col-sm padding-top:2x"><img src="bush.jpg." alt="bush" height="90" width="90" id="image19" onclick="check(18)"></div>
+            <div class="col-sm padding-top:2x"><img src="bush.jpg" alt="bush" height="90" width="90" id="image19" onclick="check(18)"></div>
             <div class="col-sm padding-top:2x"><img src="bush.jpg" alt="bush" height="90" width="90" id="image20" onclick="check(19)"></div>
             <div class="col-sm padding-top:2x"><img src="bush.jpg" alt="bush" height="90" width="90" id="image21" onclick="check(20)"></div>
             <div class="col-sm padding-top:2x"><img src="bush.jpg" alt="bush" height="90" width="90" id="image22" onclick="check(21)"></div>
